<resources>
    <string name="app_name" translatable="false">Audio Speed Up</string>
    <string name="speed_1_0x">Speed: 2.0x</string>
    <string name="testButton">Test</string>
    <string name="helpButton">Help</string>
    <string name="play_pause">Play/Pause</string>
    <string name="stop" translatable="false">Stop</string>
    <string name="restart">Restart</string>
    <string name="donate">Donate</string>
    <string name="up_volume">Turn the volume up</string>
    <string name="speed">Speed: %.2fx</string>
    <string name="title_dialog">How to use:</string>
    <string name="desc_dialog">Select a file to play by using the sharing option of apps like WhatsApp.\n\nWARNING: Some audio formats are supported only on latest Android versions.</string>
    <string name="notification">Reproducing audio…</string>
    <string name="titlespeed">Select speed</string>
    <string name="titletest">Audio sample</string>
    <string name="action_theme">Enable dark mode</string>
    <string name="action_theme_dark">Disable dark mode</string>
    <string name="audio_not_supported">Audio format not supported!</string>
    <string name="toast_change_theme">The theme will change at the reboot</string>
    <string name="privacy_policy" translatable="false">Privacy policy</string>
</resources>
